test/errors/bitmask_types_error/zs/int32_bitmask_error.zs
package int32_bitmask_error;

bitmask int32 IntBitmask // must be usigned!
{
    NONE       = 000b,
    DARK_RED   = 001b,
    DARK_BLUE  = 010b,
    DARK_BLACK = 100b
};
